bk_ida/gccida/c3/k6_load_unit_ready_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5193:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 4923, "k6_load_unit_ready_cost"); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5193:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 4923, "k6_load_unit_ready_cost"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5453:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[1], VOIDmode) && ix86_cpu == PROCESSOR_K6 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5465:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && ix86_cpu == PROCESSOR_K6 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5466:21: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !memory_operand( recog_data_0.operand[0], VOIDmode) && ix86_cpu == PROCESSOR_K6 ) 
                    ^~~~~~~~~~~~
                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5496:44: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !which_alternative && memory_operand( recog_data_0.operand[1], VOIDmode) && ix86_cpu == PROCESSOR_K6 ) 
                                           ^~~~~~~~~~~~
                                           recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5504:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( which_alternative == 1 && memory_operand( recog_data_0.operand[1], VOIDmode) && ix86_cpu == PROCESSOR_K6 ) 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5518:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( memory_operand( recog_data_0.operand[0], VOIDmode) && ix86_cpu == PROCESSOR_K6 ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5529:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( constant_call_address_operand( recog_data_0.operand[0], VOIDmode) || ix86_cpu != PROCESSOR_K6 ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/insn-attrtab.c:5541:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( constant_call_address_operand( recog_data_0.operand[1], VOIDmode) || ix86_cpu != PROCESSOR_K6 ) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/k6_load_unit_ready_cost/src/obj/insn-attrtab.o] Error 1
